--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>sportosphere-hub</title>
     <meta name="description" content="Lovable Generated Project" />
     <meta name="author" content="Lovable" />
+    <link rel="icon" href="/sportify.ico" />
 
     <meta property="og:title" content="sportosphere-hub" />
     <meta property="og:description" content="Lovable Generated Project" />
